--- a/metal-zoos-lead/package.json
+++ b/metal-zoos-lead/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ready-papers-allow",
+  "name": "metal-zoos-lead",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -17,13 +17,14 @@
     "graphql-ws": "^5.9.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "vite-tsconfig-paths": "^5.1.3"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.3",
+    "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/import-types-preset": "^3.0.0",
-    "@graphql-codegen/typescript": "^4.1.2",
-    "@graphql-codegen/typescript-operations": "^4.4.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
     "@types/node": "^18.16.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -33,10 +34,8 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "prettier": "^3.4.0",
-    "typescript": "^5.7.2",
-    "vite": "^4.3.1",
-    "vite-tsconfig-paths": "^5.1.3"
+    "typescript": "^5.4.2",
+    "vite": "^4.5.5"
   },
   "scripts": {
     "dev": "refine dev",
@@ -58,6 +57,6 @@
     ]
   },
   "refine": {
-    "projectId": "sL1rQo-ykdi8F-GiLm0V"
+    "projectId": "lP8Gro-FZVi37-NYdbsP"
   }
 }
